worked on google map

--- a/SendIT/src/index.html
+++ b/SendIT/src/index.html
@@ -25,6 +25,8 @@
 
     }
   </style>
+
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBMbtOP4GFYfEwGNX7a40KdHImx7SHnOaA"></script>
 </head>
 
 <body>
