worked on the pagination and state

--- a/SendIT/src/index.html
+++ b/SendIT/src/index.html
@@ -10,9 +10,7 @@
 
 
   <style>
-
-
-      @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,500;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+  @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,500;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
     *{
 
 
@@ -26,7 +24,7 @@
     }
   </style>
 
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBMbtOP4GFYfEwGNX7a40KdHImx7SHnOaA"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAaFkgwN_Mp1qgFosU0dfsSyipROlPbTzw&libraries=places"></script>
 </head>
 
 <body>
