working on notifications

--- a/SendIT/src/index.html
+++ b/SendIT/src/index.html
@@ -23,8 +23,9 @@
 
     }
   </style>
-
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAaFkgwN_Mp1qgFosU0dfsSyipROlPbTzw&libraries=places"></script>
+<script async
+src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDSk-X8BNurE6X3KAGH5X1lWug2Ra5-M1s&libraries=places&callback=initMap">
+</script>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
